Capitalize the blog sub-title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     A Time to Heal Blog
                 </h1>
                 <h6>
-                    Repairing your mind, body, and soul
+                    Repairing Your Mind, Body, and Soul
                 </h6>
             </div>
             <div class="content box">
