Changed dates to numeric in the side section

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
             </div>
             <div class="sidebar box" id="side">
-                <h2>Past Posts</h2><a href="./assets/pages/post2.html">May 4th 2024</a><br>
-                <a href="./assets/pages/post1.html">May 3rd 2024</a>
+                <h2>Past Posts</h2><a href="./assets/pages/post2.html">5/4/2024</a><br>
+                <a href="./assets/pages/post1.html">5/3/2024</a>
             </div>
             <div class="footer box">
                 <footer><a href="about.html">ABOUT</a> &nbsp; <a href="search.html">SEARCH</a> &nbsp; <a
